--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:background="#FF0000"
+        android:background="@android:color/holo_red_dark"
         android:textColor="#FFF"
         android:textSize="18sp"
         android:layout_marginBottom="5dp"
@@ -41,7 +41,6 @@
         android:focusableInTouchMode="false"
         android:layout_weight="0.59"
         android:background="@color/colorPrimaryDark"
-        android:autoText="true"
         android:textColor="@android:color/white">
 
         <requestFocus />
