-added settings activity -added another application icon -changed depricated HttpConnect to URLConnect

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/updateButton"
-        android:drawableRight="@android:drawable/ic_menu_rotate" />
+        android:drawableRight="@android:drawable/ic_menu_rotate"
+        android:drawableEnd="@android:drawable/ic_menu_rotate" />
+
+    <Button
+        android:text="@string/settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/settingsButton"
+        android:drawableRight="@android:drawable/ic_menu_preferences"
+        android:drawableEnd="@android:drawable/ic_menu_preferences" />
 
 </LinearLayout>
